updated add &ui

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     "email": "winnershealth20@gmail.com",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "Plot no 38 (Upstair), Malligai Street, Shanthi Nagar",
+      "streetAddress": "Plot no 38 (Upstair), Shanthi Nagar 1st Street",
       "addressLocality": "Madurai",
       "addressRegion": "Tamil Nadu",
       "postalCode": "625018",
@@ -98,7 +98,7 @@
   <nav class="navbar navbar-expand-lg sticky-top" id="mainNavbar" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/logo.png" alt="Winners Health On Logo" height="50" width="50">
+        <img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -237,7 +237,7 @@
     </section>
 
     <!-- ======== SERVICES SECTION ======== -->
-    <section class="section-padding" id="services" aria-label="Our services">
+    <section class="section-padding bg-gradient-slate" id="services" aria-label="Our services">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Our Services</span>
@@ -345,7 +345,7 @@
     </section>
 
     <!-- ======== PRACTITIONER PREVIEW ======== -->
-    <section class="section-padding" aria-label="Our practitioner">
+    <section class="section-padding bg-gradient-warm" aria-label="Our practitioner">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Our Practitioner</span>
@@ -467,7 +467,7 @@
     </section>
 
     <!-- ======== BLOG PREVIEW ======== -->
-    <section class="section-padding bg-light" aria-label="Health articles">
+    <section class="section-padding bg-gradient-blog" aria-label="Health articles">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Health Articles</span>
@@ -545,7 +545,7 @@
     </section>
 
     <!-- ======== CONTACT PREVIEW ======== -->
-    <section class="section-padding" aria-label="Contact information">
+    <section class="section-padding bg-gradient-contact" aria-label="Contact information">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Get In Touch</span>
@@ -559,7 +559,7 @@
                 <i class="bi bi-geo-alt-fill"></i>
               </div>
               <h5 class="fw-semibold mt-3">Our Location</h5>
-              <p class="text-muted small">Plot no 38 (Upstair), Malligai Street,<br>Shanthi Nagar, Madurai,<br>Tamil Nadu 625018, India</p>
+              <p class="text-muted small">Plot no 38 (Upstair),<br>Shanthi Nagar 1st Street, Madurai,<br>Tamil Nadu 625018, India</p>
             </div>
           </div>
           <div class="col-md-4">
@@ -608,7 +608,7 @@
           <!-- Column 1: About -->
           <div class="col-lg-3 col-md-6">
             <div class="footer-brand">
-              <img src="assets/logo.png" alt="Winners Health On" height="45" width="45" class="mb-3">
+              <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
               <div class="social-links mt-3">
                 <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link">
@@ -646,7 +646,7 @@
             <ul class="footer-contact">
               <li>
                 <i class="bi bi-geo-alt-fill me-2"></i>
-                <span>Plot no 38 (Upstair), Malligai Street, Shanthi Nagar, Madurai, Tamil Nadu 625018</span>
+                <span>Plot no 38 (Upstair), Shanthi Nagar 1st Street, Madurai, Tamil Nadu 625018</span>
               </li>
               <li>
                 <i class="bi bi-telephone-fill me-2"></i>
