--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
   <nav class="navbar navbar-expand-lg sticky-top" id="mainNavbar" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/logo.png" alt="Winners Health On Logo" height="50" width="50">
+        <img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -124,7 +124,7 @@
     </section>
 
     <!-- ======== OUR PHILOSOPHY ======== -->
-    <section class="section-padding bg-light" aria-label="Our philosophy">
+    <section class="section-padding bg-gradient-lavender" aria-label="Our philosophy">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Our Philosophy</span>
@@ -222,7 +222,7 @@
     </section>
 
     <!-- ======== OUR APPROACH / PROCESS ======== -->
-    <section class="section-padding bg-light" aria-label="Our approach">
+    <section class="section-padding bg-gradient-blue-wash" aria-label="Our approach">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Our Process</span>
@@ -286,7 +286,7 @@
         <div class="row g-4">
           <div class="col-lg-3 col-md-6">
             <div class="footer-brand">
-              <img src="assets/logo.png" alt="Winners Health On" height="45" width="45" class="mb-3">
+              <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
               <div class="social-links mt-3">
                 <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link">
@@ -319,7 +319,7 @@
           <div class="col-lg-4 col-md-6">
             <h5 class="footer-heading">Contact Info</h5>
             <ul class="footer-contact">
-              <li><i class="bi bi-geo-alt-fill me-2"></i><span>Plot no 38 (Upstair), Malligai Street, Shanthi Nagar, Madurai, Tamil Nadu 625018</span></li>
+              <li><i class="bi bi-geo-alt-fill me-2"></i><span>Plot no 38 (Upstair), Shanthi Nagar 1st Street, Madurai, Tamil Nadu 625018</span></li>
               <li><i class="bi bi-telephone-fill me-2"></i><a href="tel:+919786837575">+91 9786837575</a></li>
               <li><i class="bi bi-envelope-fill me-2"></i><a href="mailto:winnershealth20@gmail.com">winnershealth20@gmail.com</a></li>
               <li><i class="bi bi-clock-fill me-2"></i><span>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span></li>
