--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
   <!-- ============ NAVIGATION ============ -->
   <nav class="navbar navbar-expand-lg sticky-top" id="mainNavbar" aria-label="Main navigation">
     <div class="container">
-      <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Winners Health On Logo" height="50" width="50"></a>
+      <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto align-items-lg-center">
@@ -76,7 +76,7 @@
     </section>
 
     <!-- ======== CONTACT INFO CARDS ======== -->
-    <section class="section-padding" aria-label="Contact information">
+    <section class="section-padding bg-gradient-contact" aria-label="Contact information">
       <div class="container">
         <div class="section-header">
           <span class="section-subtitle">Get In Touch</span>
@@ -88,8 +88,8 @@
             <div class="contact-info-card animate-on-scroll text-center">
               <div class="contact-icon-wrap"><i class="bi bi-geo-alt-fill"></i></div>
               <h5 class="fw-semibold mt-3">Our Location</h5>
-              <p class="text-muted small">Plot no 38 (Upstair), Malligai Street,<br>Shanthi Nagar, Madurai,<br>Tamil Nadu 625018, India</p>
-              <a href="https://maps.google.com/?q=Plot+no+38+Malligai+Street+Shanthi+Nagar+Madurai+Tamil+Nadu+625018" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-outline-primary rounded-pill mt-2"><i class="bi bi-map me-1"></i>Get Directions</a>
+              <p class="text-muted small">Plot no 38 (Upstair),<br>Shanthi Nagar 1st Street, Madurai,<br>Tamil Nadu 625018, India</p>
+              <a href="https://maps.google.com/?q=Plot+no+38+Shanthi+Nagar+1st+Street+Madurai+Tamil+Nadu+625018" target="_blank" rel="noopener noreferrer" class="btn btn-sm btn-outline-primary rounded-pill mt-2"><i class="bi bi-map me-1"></i>Get Directions</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -206,7 +206,7 @@
         <div class="row g-4">
           <div class="col-lg-3 col-md-6">
             <div class="footer-brand">
-              <img src="assets/logo.png" alt="Winners Health On" height="45" width="45" class="mb-3">
+              <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
               <div class="social-links mt-3"><a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a></div>
             </div>
@@ -222,7 +222,7 @@
           <div class="col-lg-4 col-md-6">
             <h5 class="footer-heading">Contact Info</h5>
             <ul class="footer-contact">
-              <li><i class="bi bi-geo-alt-fill me-2"></i><span>Plot no 38 (Upstair), Malligai Street, Shanthi Nagar, Madurai, Tamil Nadu 625018</span></li>
+              <li><i class="bi bi-geo-alt-fill me-2"></i><span>Plot no 38 (Upstair), Shanthi Nagar 1st Street, Madurai, Tamil Nadu 625018</span></li>
               <li><i class="bi bi-telephone-fill me-2"></i><a href="tel:+919786837575">+91 9786837575</a></li>
               <li><i class="bi bi-envelope-fill me-2"></i><a href="mailto:winnershealth20@gmail.com">winnershealth20@gmail.com</a></li>
               <li><i class="bi bi-clock-fill me-2"></i><span>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span></li>
