--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
 
   <!-- ============ TOP INFO BAR ============ -->
-  <div class="top-bar d-none d-lg-block">
+  <div class="top-bar sticky-top d-none d-lg-block">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-8">
@@ -35,13 +35,24 @@
           <span class="mx-3">|</span>
           <span><i class="bi bi-envelope-fill me-2"></i><a href="mailto:winnershealth20@gmail.com">winnershealth20@gmail.com</a></span>
         </div>
-        <div class="col-md-4 text-end"><span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM</span></div>
+        <div class="col-md-4 text-end">
+          <div class="d-flex justify-content-end align-items-center gap-3">
+            <span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span>
+            <div class="social-links topbar-social">
+              <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+              <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- ============ NAVIGATION ============ -->
-  <nav class="navbar navbar-expand-lg sticky-top" id="mainNavbar" aria-label="Main navigation">
+  <nav class="navbar navbar-expand-lg" id="mainNavbar" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -224,7 +235,13 @@
             <div class="footer-brand">
               <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
-              <div class="social-links mt-3"><a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a></div>
+              <div class="social-links mt-3">
+                <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+              </div>
             </div>
           </div>
           <div class="col-lg-2 col-md-6">
