--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     "@type": "MedicalClinic",
     "name": "Winners Health On.",
     "description": "Electro Homeopathy (Electropathy) wellness clinic offering holistic plant-based treatments in Madurai, Tamil Nadu.",
-    "telephone": "+919786837575",
+    "telephone": "+919487183614",
     "email": "winnershealth20@gmail.com",
     "address": {
       "@type": "PostalAddress",
@@ -79,23 +79,32 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
 
   <!-- ============ TOP INFO BAR ============ -->
-  <div class="top-bar d-none d-lg-block">
+  <div class="top-bar sticky-top d-none d-lg-block">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-8">
-          <span><i class="bi bi-telephone-fill me-2"></i><a href="tel:+919786837575">+91 9786837575</a></span>
+          <span><i class="bi bi-telephone-fill me-2"></i><a href="tel:+919487183614">+91 9487183614</a></span>
           <span class="mx-3">|</span>
           <span><i class="bi bi-envelope-fill me-2"></i><a href="mailto:winnershealth20@gmail.com">winnershealth20@gmail.com</a></span>
         </div>
         <div class="col-md-4 text-end">
-          <span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM</span>
+          <div class="d-flex justify-content-end align-items-center gap-3">
+            <span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span>
+            <div class="social-links topbar-social">
+              <a href="https://wa.me/919487183614" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+              <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+              <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+              <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+              <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <!-- ============ NAVIGATION ============ -->
-  <nav class="navbar navbar-expand-lg sticky-top" id="mainNavbar" aria-label="Main navigation">
+  <nav class="navbar navbar-expand-lg" id="mainNavbar" aria-label="Main navigation">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80">
@@ -113,7 +122,7 @@
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
-        <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-appointment ms-lg-3" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/919487183614?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-appointment ms-lg-3" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-calendar-check me-2"></i>Book Appointment
         </a>
       </div>
@@ -143,7 +152,7 @@
               Experience holistic wellness with plant-based spagyric remedies and complementary therapies — gentle, natural, and free from side effects.
             </p>
             <div class="d-flex flex-wrap gap-3">
-              <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-light btn-lg rounded-pill px-4 fw-semibold" target="_blank" rel="noopener noreferrer">
+              <a href="https://wa.me/919487183614?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-light btn-lg rounded-pill px-4 fw-semibold" target="_blank" rel="noopener noreferrer">
                 <i class="bi bi-whatsapp me-2"></i>Book Appointment
               </a>
               <a href="#services" class="btn btn-outline-light btn-lg rounded-pill px-4">
@@ -152,10 +161,35 @@
             </div>
           </div>
           <div class="col-lg-5 d-none d-lg-flex justify-content-center">
-            <div class="hero-illustration">
-              <div class="hero-circle">
-                <i class="bi bi-heart-pulse"></i>
+            <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel" data-bs-interval="6000" aria-label="Natural healing imagery carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
               </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/images/hero-clinic-1.jpg" class="d-block w-100" alt="Clinic interior showing a calm, natural healing environment.">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/hero-clinic-2.jpg" class="d-block w-100" alt="Herbal medicines and spagyric remedies used in treatment.">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/hero-clinic-3.jpg" class="d-block w-100" alt="Therapy or consultation room prepared for patients.">
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/images/hero-clinic-4.jpg" class="d-block w-100" alt="Natural plant decor reflecting the clinic's focus on nature-based healing.">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
           </div>
         </div>
@@ -169,28 +203,28 @@
           <div class="col-6 col-md-3">
             <div class="stat-item animate-on-scroll">
               <div class="stat-icon"><i class="bi bi-people-fill"></i></div>
-              <div class="stat-number" data-target="5000" data-suffix="+">0</div>
+              <div class="stat-number" data-target="5000" data-suffix="+">5550+</div>
               <div class="stat-label">Patients Treated</div>
             </div>
           </div>
           <div class="col-6 col-md-3">
             <div class="stat-item animate-on-scroll">
               <div class="stat-icon"><i class="bi bi-clipboard2-pulse"></i></div>
-              <div class="stat-number" data-target="10" data-suffix="+">0</div>
+              <div class="stat-number" data-target="10" data-suffix="+">20+</div>
               <div class="stat-label">Therapies Offered</div>
             </div>
           </div>
           <div class="col-6 col-md-3">
             <div class="stat-item animate-on-scroll">
               <div class="stat-icon"><i class="bi bi-award"></i></div>
-              <div class="stat-number" data-target="8" data-suffix="+">0</div>
+              <div class="stat-number" data-target="8" data-suffix="+">30</div>
               <div class="stat-label">Years Experience</div>
             </div>
           </div>
           <div class="col-6 col-md-3">
             <div class="stat-item animate-on-scroll">
               <div class="stat-icon"><i class="bi bi-leaf"></i></div>
-              <div class="stat-number" data-target="100" data-suffix="%">0</div>
+              <div class="stat-number" data-target="100" data-suffix="%">100+</div>
               <div class="stat-label">Natural Remedies</div>
             </div>
           </div>
@@ -356,15 +390,13 @@
           <div class="col-md-8 col-lg-5">
             <div class="team-card animate-on-scroll">
               <div class="team-photo">
-                <div class="img-placeholder" style="min-height:300px; background: var(--color-accent-light);">
-                  <i class="bi bi-person-circle" style="font-size:5rem; color: var(--color-accent);"></i>
-                </div>
+                <img src="assets/images/ceo-joy-nirmalan.jpg" alt="Portrait of Joy Nirmalan, CEO and Founder of Winners Health On" class="img-fluid rounded-4" style="width:100%; object-fit:cover; min-height:300px;">
               </div>
               <div class="team-info text-center">
                 <h4 class="team-name">Joy Nirmalalan P</h4>
                 <p class="team-role">CEO &amp; Founder — Electropathy Practitioner</p>
                 <p class="team-bio text-muted small">
-                  With over 8 years of experience in Electro Homeopathy, Joy Nirmalalan P founded Winners Health On to bring holistic, plant-based healing to Madurai. Trained in Count Cesare Mattei's spagyric medicine, he integrates Electropathy with modern wellness therapies.
+                  With over 30 years of experience in Electro Homeopathy, Joy Nirmalalan P founded Winners Health On to bring holistic, plant-based healing to Madurai. Trained in Count Cesare Mattei's spagyric medicine, he integrates Electropathy with modern wellness therapies.
                 </p>
               </div>
             </div>
@@ -538,7 +570,7 @@
       <div class="container text-center">
         <h2 class="display-6 fw-bold text-white mb-3">Ready to Begin Your Healing Journey?</h2>
         <p class="lead text-white mb-4" style="opacity:0.85;">Book a consultation with our experienced Electropathy practitioners today.</p>
-        <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20a%20consultation%20at%20Winners%20Health%20On." class="btn btn-light btn-lg rounded-pill px-5 fw-semibold" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/919487183614?text=Hello%2C%20I%20would%20like%20to%20book%20a%20consultation%20at%20Winners%20Health%20On." class="btn btn-light btn-lg rounded-pill px-5 fw-semibold" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-whatsapp me-2"></i>Chat on WhatsApp
         </a>
       </div>
@@ -569,8 +601,7 @@
               </div>
               <h5 class="fw-semibold mt-3">Call Us</h5>
               <p class="text-muted small">
-                <a href="tel:+919786837575" class="text-decoration-none">+91 9786837575</a><br>
-                <a href="tel:+919487183614" class="text-decoration-none">+91 9487183614</a>
+                 <a href="tel:+919487183614" class="text-decoration-none">+91 9487183614</a>
               </p>
             </div>
           </div>
@@ -611,9 +642,11 @@
               <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
               <div class="social-links mt-3">
-                <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link">
-                  <i class="bi bi-whatsapp"></i>
-                </a>
+                <a href="https://wa.me/919487183614" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -650,7 +683,7 @@
               </li>
               <li>
                 <i class="bi bi-telephone-fill me-2"></i>
-                <a href="tel:+919786837575">+91 9786837575</a>
+                <a href="tel:+919487183614">+91 9487183614</a>
               </li>
               <li>
                 <i class="bi bi-envelope-fill me-2"></i>
@@ -680,7 +713,7 @@
   </footer>
 
   <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20Electropathy%20treatments." class="whatsapp-float" aria-label="Chat on WhatsApp" target="_blank" rel="noopener noreferrer">
+  <a href="https://wa.me/919487183614?text=Hello%2C%20I%20would%20like%20to%20know%20more%20about%20your%20Electropathy%20treatments." class="whatsapp-float" aria-label="Chat on WhatsApp" target="_blank" rel="noopener noreferrer">
     <i class="bi bi-whatsapp"></i>
     <span class="whatsapp-tooltip">Chat with us</span>
   </a>
