--- a/team.html
+++ b/team.html
@@ -47,17 +47,37 @@
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="assets/logo.png" alt="Winners Health On Logo" height="80" width="80"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+          <span><i class="bi bi-telephone-fill me-2"></i><a href="tel:+919786837575">+91 9786837575</a></span>
         <ul class="navbar-nav ms-auto align-items-lg-center">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+          <div class="col-md-4 text-end">
+            <div class="d-flex justify-content-end align-items-center gap-3">
+              <span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM</span>
+              <div class="social-links topbar-social">
+                <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
           <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
           <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
           <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
-        <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-appointment ms-lg-3" target="_blank" rel="noopener noreferrer"><i class="bi bi-calendar-check me-2"></i>Book Appointment</a>
+    <nav class="navbar navbar-expand-lg" id="mainNavbar" aria-label="Main navigation">
+          <div class="navbar-social d-none d-lg-flex">
+            <a href="https://wa.me/919786837575" class="social-link" aria-label="WhatsApp" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.youtube.com/" class="social-link" aria-label="YouTube" target="_blank" rel="noopener noreferrer"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+            <a href="https://twitter.com/" class="social-link" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.linkedin.com/" class="social-link" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+          </div>
+          <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-appointment" target="_blank" rel="noopener noreferrer"><i class="bi bi-calendar-check me-2"></i>Book Appointment</a>
+        </div>
       </div>
     </div>
   </nav>
@@ -89,9 +109,7 @@
           <div class="col-lg-5 animate-on-scroll" data-animation="fade-right">
             <div class="team-card">
               <div class="team-photo">
-                <div class="img-placeholder" style="min-height:400px; background: var(--color-accent-light);">
-                  <i class="bi bi-person-circle" style="font-size:6rem; color: var(--color-accent);"></i>
-                </div>
+                <img src="assets/images/ceo-joy-nirmalan.jpg" alt="Portrait of Joy Nirmalan, CEO and Founder of Winners Health On" class="img-fluid rounded-4" style="width:100%; object-fit:cover; min-height:400px;">
               </div>
               <div class="team-info text-center">
                 <h4 class="team-name">Joy Nirmalalan P</h4>
@@ -193,7 +211,13 @@
             <div class="footer-brand">
               <img src="assets/logo.png" alt="Winners Health On" height="65" width="65" class="mb-3">
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
-              <div class="social-links mt-3"><a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a></div>
+              <div class="social-links mt-3">
+                <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+              </div>
             </div>
           </div>
           <div class="col-lg-2 col-md-6">
