--- a/team.html
+++ b/team.html
@@ -71,10 +71,10 @@
     <nav class="navbar navbar-expand-lg" id="mainNavbar" aria-label="Main navigation">
           <div class="navbar-social d-none d-lg-flex">
             <a href="https://wa.me/919786837575" class="social-link" aria-label="WhatsApp" target="_blank" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
-            <a href="https://www.youtube.com/" class="social-link" aria-label="YouTube" target="_blank" rel="noopener noreferrer"><i class="bi bi-youtube"></i></a>
-            <a href="https://www.instagram.com/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-            <a href="https://twitter.com/" class="social-link" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></a>
-            <a href="https://www.linkedin.com/" class="social-link" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.youtube.com/@winnershealthon" class="social-link" aria-label="YouTube" target="_blank" rel="noopener noreferrer"><i class="bi bi-youtube"></i></a>
+            <a href="https://www.instagram.com/winnershealthon.j/" class="social-link" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+            <a href="https://x.com/winnershealth_j" class="social-link" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.linkedin.com/in/joy-nirmalan/" class="social-link" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
           </div>
           <a href="https://wa.me/919786837575?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20at%20Winners%20Health%20On." class="btn btn-appointment" target="_blank" rel="noopener noreferrer"><i class="bi bi-calendar-check me-2"></i>Book Appointment</a>
         </div>
@@ -213,10 +213,10 @@
               <p class="text-muted small">Winners Health On is a trusted Electropathy clinic in Madurai offering holistic plant-based treatments to restore your body's natural balance.</p>
               <div class="social-links mt-3">
                 <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
-                <a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
-                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.youtube.com/@winnershealthon" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
+                <a href="https://www.instagram.com/winnershealthon.j/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="social-link"><i class="bi bi-instagram"></i></a>
+                <a href="https://x.com/winnershealth_j" target="_blank" rel="noopener noreferrer" aria-label="Twitter" class="social-link"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://www.linkedin.com/in/joy-nirmalan/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link"><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
           </div>
