--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-4 text-end">
           <div class="d-flex justify-content-end align-items-center gap-3">
-            <span><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span>
+            <span class="topbar-hours"><i class="bi bi-clock-fill me-2"></i>Mon – Fri: 9AM – 6PM | Sat: 10AM – 2PM</span>
             <div class="social-links topbar-social">
               <a href="https://wa.me/919786837575" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="social-link"><i class="bi bi-whatsapp"></i></a>
               <a href="https://www.youtube.com/@winnershealthon" target="_blank" rel="noopener noreferrer" aria-label="YouTube" class="social-link"><i class="bi bi-youtube"></i></a>
