updated servicesCard links

--- a/index.html
+++ b/index.html
@@ -280,28 +280,14 @@
           <p class="section-desc">We offer a comprehensive range of natural therapies rooted in the science of Electropathy, complemented by modern wellness practices.</p>
         </div>
         <div class="row g-4">
-          <!-- Service 1 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll">
+          <!-- Featured combined service card -->
+          <div class="col-12">
+            <div class="service-card featured-gradient animate-on-scroll">
               <div class="service-icon"><i class="bi bi-heart-pulse"></i></div>
-              <h4>Modern ElectroPathy Treatment</h4>
-              <p>Our core therapy using plant-based spagyric remedies to restore your body's natural electrical balance and vital energy.</p>
-            </div>
-          </div>
-          <!-- Service 2 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll">
-              <div class="service-icon"><i class="bi bi-compass"></i></div>
-              <h4>Guidance Center</h4>
-              <p>Comprehensive health guidance and lifestyle consultation to empower patients with preventive wellness knowledge.</p>
-            </div>
-          </div>
-          <!-- Service 3 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll">
-              <div class="service-icon"><i class="bi bi-chat-heart"></i></div>
-              <h4>Counseling Therapy</h4>
-              <p>Professional counseling sessions addressing emotional and psychological well-being through supportive dialogue.</p>
+              <h4>Modern ElectroPathy Treatment, Guidance and Counseling Center</h4>
+              <p>
+                Experience a complete support system that combines natural Electropathy treatment with personalized health guidance and compassionate counseling. We work with you on both physical and emotional levels so you feel supported through every step of your healing journey.
+              </p>
             </div>
           </div>
           <!-- Service 4 -->
