--- a/services.html
+++ b/services.html
@@ -105,28 +105,14 @@
           <p class="section-desc">We offer a comprehensive range of natural therapies rooted in the science of Electropathy, complemented by modern wellness practices.</p>
         </div>
         <div class="row g-4">
-          <!-- Service 1 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll" id="service-1">
+          <!-- Featured combined service card -->
+          <div class="col-12">
+            <div class="service-card featured-gradient animate-on-scroll" id="service-1">
               <div class="service-icon"><i class="bi bi-heart-pulse"></i></div>
-              <h4>Modern ElectroPathy Treatment</h4>
-              <p>Our core therapy using plant-based spagyric remedies formulated from medicinal herbs. Electropathy treats the root cause of illness by restoring your body's natural electrical balance and vital energy, addressing chronic and acute conditions holistically.</p>
-            </div>
-          </div>
-          <!-- Service 2 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll" id="service-2">
-              <div class="service-icon"><i class="bi bi-compass"></i></div>
-              <h4>Guidance Center</h4>
-              <p>Comprehensive health guidance and lifestyle consultation to empower patients with knowledge about Electropathy principles, preventive wellness, and self-care practices for long-term health and vitality.</p>
-            </div>
-          </div>
-          <!-- Service 3 -->
-          <div class="col-md-6 col-lg-4">
-            <div class="service-card animate-on-scroll" id="service-3">
-              <div class="service-icon"><i class="bi bi-chat-heart"></i></div>
-              <h4>Counseling Therapy</h4>
-              <p>Professional counseling sessions addressing emotional and psychological well-being. Our counselors help patients navigate stress, anxiety, relationship challenges, and life transitions through supportive dialogue and evidence-based techniques.</p>
+              <h4>Modern ElectroPathy Treatment, Guidance and Counseling Center</h4>
+              <p>
+                Our core Electropathy therapy uses plant-based spagyric remedies to restore your body's natural electrical balance and vital energy, while our guidance and counseling center provides lifestyle coaching and emotional support. Together, they help you address both the root physical causes and the mental-emotional dimensions of your health for truly holistic healing.
+              </p>
             </div>
           </div>
           <!-- Service 4 -->
